2007-02-06  Dalibor Topic  <robilad@kaffe.org>

        * compress.h
        Added #ifndef __FASTJAR_COMPRESS_H__.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

	* dostime.c (unix2dostime): Renamed parameter to
	unix_time.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (list_jar, extract_jar, init_args, 
	get_next_arg): Added const qualifier to char ** 
	parameter and return types.
	(main) Added const qualifier to type of new_argv.
	Modified malloc cast accordingly. Fixed cast of
	const char * to char *.
	(args_g) Added const qualifier to type.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (main): Replaced unreachable exit call
	after version call with a break statement.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

	* compress.c (init_compression, end_compression,
	init_inflation): Added missing 'void' parameter type.

	* jargrep.c (version): Added missing 'void' parameter
	type.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

	* jartool.h (__attribute__): Remove define.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.am (fastjar_CPPFLAGS): Removed.
	(grepjar_SOURCES) Added shift.c and shift.h.

	* compress.c (seekable, end_of_entries): Removed.
	(write_data) Removed __attribute__((unused)).
	Removed WITH_SHIFT_DOWN.

	* configure.ac (AM_PROG_CC_C_O): Removed.

	* jartool.c (end_of_entries): Moved field to ...

	* shift.c (end_of_entries): ... here. New field.
	(shift_up, shift_down) Removed declarations of
	end_of_entries.

	* shift.h (end_of_entries): Added field to 
	exported header as it is used in jartool.c.

	* Makefile.in, aclocal.m4, config.h.in, 
	configure: Regenerated.

2007-02-06  Wil Mahan  <wmahan@users.sourceforge.net>

	* jartool.c (list_jar): Fall back on 
	the method used for non-seekable files when 
	reading the central-header-end section does 
	not work, i.e. in archives with a zipfile 
	comment at the end.

	Patch taken from fastjar.sourceforge.net
	patch repository.
